Changed Picture Urls

--- a/templates/eugenes-renovations/index.html
+++ b/templates/eugenes-renovations/index.html
@@ -43,22 +43,22 @@
                 <h3>Professionals Committed To Modern Furnishings</h3>
                 <div class="people">
                     <div>
-                        <img id="img1" src="1.jpg" />
+                        <img id="img1" src="assets/1.jpg" />
                         <span>Founder</span>
                         <h3>Eugene F.</h3>
                     </div>
                     <div>
-                        <img id="img2" src="2.jpg" />
+                        <img id="img2" src="assets/2.jpg" />
                         <span>Designer</span>
                         <h3>Leila S.</h3>
                     </div>
                     <div>
-                        <img src="3.jpg" />
+                        <img src="assets/3.jpg" />
                         <span>Architect</span>
                         <h3>Kevin W.</h3>
                     </div>
                     <div>
-                        <img src="4.jpg" />
+                        <img src="assets/4.jpg" />
                         <span>Manager</span>
                         <h3>Crystal M.</h3>
                     </div>
