--- a/templates/eugenes-renovations/index.html
+++ b/templates/eugenes-renovations/index.html
@@ -3,8 +3,8 @@
         <head>
             <title>Eugene's Renovations</title>
             <meta charset="utf-8">
+            <link href="http://fonts.cdnfonts.com/css/freeway-gothic" rel="stylesheet" type="text/css"> 
             <link href="style.css" rel="stylesheet" type="text/css">
-            <link href="http://fonts.cdnfonts.com/css/freeway-gothic" rel="stylesheet"> 
 
         </head>
         <body>
