--- a/templates/eugenes-renovations/index.html
+++ b/templates/eugenes-renovations/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
+            <meta name="viewport" content="width=device-width,initial-scale=1">
             <title>Eugene's Renovations</title>
             <meta charset="utf-8">
             <link href="http://fonts.cdnfonts.com/css/freeway-gothic" rel="stylesheet" type="text/css"> 
@@ -31,11 +32,13 @@
                         <img src="https://images.unsplash.com/photo-1514454923228-7ef54f9251c9" />
                         <img src="https://images.unsplash.com/photo-1583847268964-b28dc8f51f92" />
                         <img src="https://images.unsplash.com/photo-1522771739844-6a9f6d5f14af" />
+                        <img src="https://images.unsplash.com/photo-1488901512066-cd403111aeb2" />
                     </div>
                     <div class="col">
                         <img src="https://images.unsplash.com/photo-1488901512066-cd403111aeb2" />
                         <img src="https://images.unsplash.com/photo-1504297050568-910d24c426d3" />
-                        <img src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4" />                        <img src="https://images.unsplash.com/photo-1502005097973-6a7082348e28" />
+                        <img src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4" />
+                        <img src="https://images.unsplash.com/photo-1502005097973-6a7082348e28" />
                     </div>
                 </div>
             </section>
