--- a/templates/eugenes-renovations/index.html
+++ b/templates/eugenes-renovations/index.html
@@ -6,7 +6,6 @@
             <meta charset="utf-8">
             <link href="http://fonts.cdnfonts.com/css/freeway-gothic" rel="stylesheet" type="text/css"> 
             <link href="style.css" rel="stylesheet" type="text/css">
-
         </head>
         <body>
             <nav>
@@ -15,6 +14,11 @@
                 <a href="#work">Work </a>
                 <a href="#team">Team</a>
                 <a href="#contact">Contact</a>
+                <div id="hamburger">
+                    <div id="top"></div>
+                    <div id="mid"></div>
+                    <div id="bottom"></div>
+                </div>
             </nav>
             <header>
                 <h1>EUGENE'S RENOVATIONS</h1>
@@ -110,5 +114,9 @@
                     <a href="#"><svg xmlns="http://www.w3.org/2000/svg" id="Bold" enable-background="new 0 0 24 24" height="50" viewBox="0 0 24 24" width="50"><path d="m12.326 0c-6.579.001-10.076 4.216-10.076 8.812 0 2.131 1.191 4.79 3.098 5.633.544.245.472-.054.94-1.844.037-.149.018-.278-.102-.417-2.726-3.153-.532-9.635 5.751-9.635 9.093 0 7.394 12.582 1.582 12.582-1.498 0-2.614-1.176-2.261-2.631.428-1.733 1.266-3.596 1.266-4.845 0-3.148-4.69-2.681-4.69 1.49 0 1.289.456 2.159.456 2.159s-1.509 6.096-1.789 7.235c-.474 1.928.064 5.049.111 5.318.029.148.195.195.288.073.149-.195 1.973-2.797 2.484-4.678.186-.685.949-3.465.949-3.465.503.908 1.953 1.668 3.498 1.668 4.596 0 7.918-4.04 7.918-9.053-.016-4.806-4.129-8.402-9.423-8.402z" fill="#b4a5a5"/></svg></a>
                 </div>
             </footer>
+
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
+            <script src="script.js"></script>
+            
         </body>
     </html>
