--- a/templates/eugenes-renovations/style.css
+++ b/templates/eugenes-renovations/style.css
@@ -62,6 +62,7 @@ h3{
 /* || Navigation */
 nav{
     width: 100%;
+    max-width: 100%;
     height: auto;
     background-color: #151515;
     display: flex;
@@ -71,10 +72,56 @@ nav{
     font-size: 1.4em;
     position: fixed;
     z-index: 10;
+    
 }
 nav a {
     padding: 15px;
+    transition: opacity 800ms ease;
 }
+
+nav > a:nth-child(1){transition-delay: 100ms;}
+nav > a:nth-child(2){transition-delay: 200ms;}
+nav a:nth-child(3){transition-delay: 300ms;}
+nav a:nth-child(4){transition-delay: 400ms;}
+nav a:nth-child(5){transition-delay: 500ms;}
+
+#hamburger {
+    display: none;
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+}
+
+#top, #mid, #bottom {
+    width: 32px;
+    height: 3px;
+    background-color: #b4a5a5;
+    margin: 2px;
+    transition: all 700ms ease;
+}
+
+/* Hamburger Icon to "X" transforms" */
+
+.topX {
+    display: none;
+}
+
+.midX {
+    transform: rotate(140deg);
+}
+
+.bottomX {
+    transform: rotate(40deg) translate(-3px,-4px);
+}
+
+.nav-display {
+    display: block!important;
+}
+
+.opaque {
+    opacity: 1;
+}
+
 /* || Header */
 header{
     width: 100%;
@@ -328,13 +375,27 @@ footer a > svg {
     }
 
     iframe {
-        max-width: 90%;
+        max-width: 99%;
+    }
+    
+    #hamburger {
+        display: block;
+    }
+
+    nav {
+        flex-direction: column;
+    }
+
+    nav a {
+        display: none;
+        opacity: 0;
     }
 }
 
 @media screen and (max-width: 845px) {
     header h1 {
         text-align: center;
+        font-size: 2.2em;
     }
     #mission p {
         max-width: 75%;
@@ -343,4 +404,4 @@ footer a > svg {
     footer {
       flex-direction: column;
     }
-
+}
