--- a/templates/eugenes-renovations/index.html
+++ b/templates/eugenes-renovations/index.html
@@ -75,7 +75,7 @@
             <h2 id="contact-title">Get In Touch</h2>
             <section id="contact">
                 <div>
-                    <form action="/contact-success/" method="post" class="contact-form">
+                    <form action="#" method="post" class="contact-form">
                 
                         <label for="name">Full Name</label>
                         <input type="text" name="name" id="name" placeholder="Enter your name...">
@@ -117,6 +117,6 @@
 
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
             <script src="script.js"></script>
-            
+
         </body>
     </html>
