--- a/templates/eugenes-renovations/index.html
+++ b/templates/eugenes-renovations/index.html
@@ -33,16 +33,16 @@
                 <h2>Renovations</h2>
                 <div class="pictures">
                     <div class="col">
-                        <img src="https://images.unsplash.com/photo-1514454923228-7ef54f9251c9" />
-                        <img src="https://images.unsplash.com/photo-1583847268964-b28dc8f51f92" />
-                        <img src="https://images.unsplash.com/photo-1522771739844-6a9f6d5f14af" />
-                        <img src="https://images.unsplash.com/photo-1488901512066-cd403111aeb2" />
+                        <img src="assets/photo1.jpg" />
+                        <img src="assets/photo2.jpg" />
+                        <img src="assets/photo3.jpg" />
+                        <img src="assets/photo4.jpg" />
                     </div>
                     <div class="col">
-                        <img src="https://images.unsplash.com/photo-1488901512066-cd403111aeb2" />
-                        <img src="https://images.unsplash.com/photo-1504297050568-910d24c426d3" />
-                        <img src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4" />
-                        <img src="https://images.unsplash.com/photo-1502005097973-6a7082348e28" />
+                        <img src="assets/photo5.jpg" />
+                        <img src="assets/photo6.jpg" />
+                        <img src="assets/photo7.jpg" />
+                        <img src="assets/photo8.jpg" />
                     </div>
                 </div>
             </section>
