--- a/media/font.css
+++ b/media/font.css
@@ -3,5 +3,5 @@
   font-style: normal;
   font-weight: 100;
   font-display: swap;
-  src: url(http://stavrosga.com/media/AverBold-4YlW.woff2) format('woff2');
+  src: url(https://stavrosga.com/media/AverBold-4YlW.woff2) format('woff2');
 }
