--- a/media/font.css
+++ b/media/font.css
@@ -1,7 +1,7 @@
 @font-face {
-  font-family: 'Aver';
+  font-family: 'Averel';
   font-style: normal;
   font-weight: 100;
   font-display: swap;
-  src: url(https://stavrosga.com/media/AverBold-4YlW.woff2) format('woff2');
+  src: url(https://stavrify.github.io/media/AverBold-4YlW.woff2) format('woff2');
 }
