--- a/media/font.css
+++ b/media/font.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Averel';
+  font-family: 'Avereli';
   font-style: normal;
   font-weight: 100;
   font-display: swap;
