--- a/media/font.css
+++ b/media/font.css
@@ -4,4 +4,5 @@
   font-weight: 100;
   font-display: swap;
   src: url(https://stavrify.github.io/media/AverBold-4YlW.woff2) format('woff2');
+  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
